fix horizontal scrollbar

--- a/site/.vitepress/theme/css/headerbackground.css
+++ b/site/.vitepress/theme/css/headerbackground.css
@@ -12,7 +12,7 @@
 #stars {
 	display: block;
 	position: relative;
-	width: 100vw;
+	width: 100%;
 	height: 70vh;
 	z-index: 1;
 	-webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgb(0, 0, 0, 1) 30%);
